# mini-osp-vis

./: .gitignore  CMakeLists.txt  README.md  fetch_scivis.py  imgui_impl_opengl3.h  load_off.cpp  load_off.h  loader.cpp  loader.h  main.cpp  volume_data.h
cmake/: glm.cmake
util/: CMakeLists.txt  shader.cpp  shader.h  transfer_function_widget.cpp  transfer_function_widget.h  util.cpp  util.h
